workspace = { members = ["labt-proc-macro"] }
[package]
name = "labt"
version = "0.3.0"
edition = "2021"
description = "Lab-t Lightweight Android build tool" 
homepage = "https://gitlab.com/lab-tool/labt"
repository = "https://gitlab.com/lab-tool/labt"
license-file = "LICENSE"
keywords = ["android", "build-tool", "plugin", "lua", "cache"] 
categories = ["development-tools::build-utils", "caching"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.8", features = ["derive"] }
console = "0.15.7"
dialoguer = "0.11.0"
env_logger = "0.11.3"
futures-util = "0.3.30"
git2 = { version = "0.18.3", features = ["https", "openssl-probe"], default-features = false }
indicatif = "0.17.7"
indicatif-log-bridge = "0.2.2"
log = "0.4.21"
mlua = { version = "0.9.6", features = ["vendored", "lua54", "serde", "serialize"] }
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
regex = "1.10.2"
reqwest = { version = "0.11.24", features = ["stream", "blocking"] }
sailfish = "0.8.3"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "full", "io-util"] }
tokio-util = { version = "0.7.10", features = ["io"] }
toml = "0.8.9"
toml_edit = { version = "0.21.1", features = ["serde"] }
version-compare = "0.1.1"
labt-proc-macro = {path = "labt-proc-macro", version = "0.1.0"}
glob = "0.3.1"
zip = { version = "2.1.1", default-features = false, features = ["deflate"] }
ratatui = "0.26.3"
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
sha1 = "0.10.6"
lazy_static = "1.5.0"
